--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
     <h1>Hello damn world!</h1>
     <p>i'm gonna give it a shot!</p>
+    <aside><ol>
+        <a href="/index.html/Home/">Home</a>
+        <a href="/index.html/products/">products</a>
+        <a>contacts</a>
+        <a>about us</a>
+        <a>Term & conditions</a>
+    </ol></aside>
 </body>
 </html>
